# applied-causal-inference

./: .gitignore  README.md  pyproject.toml
src/notebooks/: 00_preface.ipynb  01_intro_to_causality.ipynb  02_theory_and_basic_concepts.ipynb  03_a_practical_approach.ipynb  04_causal_discovery.ipynb  05_nlp.ipynb  preface.ipynb  sachs.txt
tests/: test_version.py
