[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aci"
version = "0.0.1"
description = ""
dependencies = [
    "pandas ==3.0.1",
    "matplotlib ==3.10.8",
    "scikit-learn ==1.8.0",
    "numpy ==2.4.2",
    "arviz ==0.23.4",
    "ipywidgets ==8.1.8",
    "causal-learn ==0.1.4.4",
    "networkx ==3.6.1",
]

[project.optional-dependencies]
dev = [
    "ruff ==0.15.4",
    "black ==26.1.0",
    "mypy ==1.19.1",
]
