[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aci"
version = "0.0.1"
description = ""
dependencies = [
    "arviz ==1.0.0",
    "causal-learn ==0.1.4.4",
    "causallift ==1.0.6",
    "causalml ==0.15.5",
    "dowhy ==0.14",
    "econml ==0.16.0",
    "ipywidgets ==8.1.8",
    "matplotlib ==3.10.8",
    "networkx ==3.6.1",
    "numpy ==2.4.3",
    "pandas ==3.0.1",
    "scikit-learn ==1.6.1",
    "scipy ==1.15.3",
]

[project.optional-dependencies]
dev = [
    "black ==26.1.0",
    "mypy ==1.19.1",
    "ruff ==0.15.4",
]
